--- a/game.html
+++ b/game.html
@@ -6,32 +6,37 @@
     <title>repl.it</title>
     <link href="style.css" rel="stylesheet" type="text/css" />
     <style>
-      canvas {
-          border: 1px solid #d3d3d3;
-          background-color: #f1f1f1;
-      }
+        canvas {
+            border: 1px solid #d3d3d3;
+            background-color: #f1f1f1;
+        }
     </style>
-  </head>
-  <body onload="startGame()">
+</head>
+
+<body onload="startGame()">
+    <div class="sidenav">
+        <a href="home.html">Home</a>
+        <a href="instructions.html">Instructions</a>
+        <a href="game.html">Game</a>
+    </div>
+    <div class="main">
+        <p> Note a few things. I need to put the event onLoad in the body tag for my canvas to show up </p>
+
+        <p> For this part do the following...</p>
+
+        <ol>
+            <li>Change the color of the canvas</li>
+            <li>Change the size of the canvas</li>
+            <li>Change the color of the red square, BUT NOT GREEEN</li>
+            <li>This Game at the moment is terrible. Create buttons to move down, left, right, and stop</li>
+            <li>What is the significance of updateGameArea()? Be thorough in your explaination</li>
+
+            <li>Create another component that is green. You should have a square and another green object as your final product</li>
+        </ol>
+
+        <button onclick="moveup()">UP</button>
 
 
-    <p> Note a few things. I need to put the event onLoad in the body tag for my canvas to show up </p>
-
-    <p> For this part do the following...</p>
-
-    <ol>
-      <li>Change the color of the canvas</li>
-      <li>Change the size of the canvas</li>
-      <li>Change the color of the red square, BUT NOT GREEEN</li>
-      <li>This Game at the moment is terrible. Create buttons to move down, left, right, and stop</li>
-      <li>What is the significance of updateGameArea()? Be thorough in your explaination</li>
-
-      <li>Create another component that is green. You should have a square and another green object as your final product</li>
-    </ol>
-
-    <button onclick="moveup()">UP</button>
-
-
-    <script src="script.js"></script>
-  </body>
-</html>
+        <script src="script.js"></script>
+    </div>
+</body></html>
