--- a/home.html
+++ b/home.html
@@ -15,7 +15,7 @@
     </div>
 
     <div class="main">
-        <h2>Pog Cookie Clicker</h2>
-        <p>Welcome to our very cool cookie clicker game. It has many features and is very fun to play.</p>
+        <h2>Dinosaur Game!</h2>
+        <p>Welcome to our very cool dinosaur game. It has many features and is very fun to play.</p>
     </div>
 </body></html>
