--- a/instructions.html
+++ b/instructions.html
@@ -15,7 +15,13 @@
     </div>
 
     <div class="main">
-        <h2>Pog Cookie Clicker</h2>
-        <p>Welcome to our very cool cookie clicker game. It has many features and is very fun to play.</p>
+        <h2>Dinosaur Game!</h2>
+        <p>To play:</p>
+        <ul>
+            <li>Cactuses will come towards your dinosaur</li>
+            <li>If you hit one, you lose</li>
+            <li>Press the space bar to jump over obstacles</li>
+            <li>Press the space bar to restart</li>
+        </ul>
     </div>
 </body></html>
